metadata/force-app/main/default/objects/MQL_Snapshot__c/MQL_Snapshot__c.object-meta.xml
<CustomObject>
    <description>stores historical amount of MQLs</description>
    <label>MQL Snapshot</label>
    <nameField>
        <label>MQL Snapshot</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MQL Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>