metadata/force-app/main/default/objects/MQL_Snapshot__c/fields/Lead_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Lead_Created_Date__c</fullName>
    <label>Lead Created Date</label>
    <length>20</length>
    <type>Text</type>
</CustomField>